# gst-plugins-base

./: configure.ac
gst-libs/gst/riff/: Makefile.am
gst/tcp/: Makefile.am  gstmultifdsink.c  gsttcp.c  gsttcp.h  gsttcpclientsink.c  gsttcpclientsink.h  gsttcpclientsrc.c  gsttcpclientsrc.h  gsttcpplugin.c  gsttcpserversink.c  gsttcpserversink.h  gsttcpserversrc.c  gsttcpserversrc.h
tests/check/: Makefile.am
